sql listjava modification